# auth-server

./: Cargo.toml  docker-compose.yaml
migrations/: 001_users.sql  002_clients.sql  003_tokens.sql
src/: app_state.rs  congif.rs  jwt.rs  main.rs
